# render_playground

./: Cargo.toml  README.md  index.html
res/teapot/: teapot_smooth.mtl
src/: controls.rs  lib.rs  main.rs  model.rs  resources.rs  scene.rs  texture.rs
src/scene/: mod.rs  obj_scene.rs  terrain_scene.rs
src/scene/terrain/: chunk.rs  mod.rs
src/shader/: cube.wgsl  terrain.wgsl
