[package]
name = "iced_wgpu"
version = "0.1.0"
authors = ["John Christensen"]
edition = "2021"
publish = false

[dependencies]
bytemuck = { version = "1.21.0", features = ["bytemuck_derive"] }
glam = "0.29.2"
iced_widget = { version = "0.13.4", features = ["wgpu"] }
iced_winit = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
iced_wgpu = "0.13.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_wgpu = {version = "0.13.5",features = ["webgl"]}

console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }

