cargo-features = ["codegen-backend"]
[package]
name = "render_playground"
version = "0.1.0"
authors = ["John Christensen"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["bytemuck_derive"] }
cfg-if = "1.0.0"
glam = "0.29.2"
iced_widget = { version = "0.13.4", features = ["wgpu"] }
iced_winit = { version = "0.13.0", features = ["debug"] }
image = { version = "0.24",default-features=false, features = ["png","jpeg"] }
log = "0.4.22"
ndarray = "0.16.1"
noise = { version = "0.9.0", features = ["images"] }
tobj = { version = "3.2", default-features = false, features = ["async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = {version = "0.3",featuers = ["env-filter"]}
iced_wgpu = "0.13.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced_wgpu = {version = "0.13.5",features = ["webgl"]}
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
